# stm32-template

./: .clangd  .gitmodules  CMakeLists.txt  Makefile  README.md
bsp/: board_def.h  bsp.h  default_board.h
bsp/default_board/: CMakeLists.txt  Makefile  compile_commands.json  default_board.ioc  jflash
bsp/default_board/.cache/clangd/index/: cmsis_compiler.h.465E3B6189EA09FF.idx  cmsis_gcc.h.DF20300852C47158.idx  cmsis_version.h.4B242507BF325619.idx  core_cm4.h.3DC5CAC61E29B6AE.idx  main.h.6F6E618CB93FCB42.idx  mpu_armv7.h.085BB0E082C6A481.idx  stm32_hal_legacy.h.0ADD1A5CDFAB5D5D.idx  stm32f407xx.h.66C075C05AD35A24.idx  stm32f4xx.h.709BDC19B1685B71.idx  stm32f4xx_hal.h.57FEE839A8F98F01.idx  stm32f4xx_hal_conf.h.919A29E11CBD3F41.idx  stm32f4xx_hal_cortex.h.BE9227E236FC588D.idx  stm32f4xx_hal_def.h.3C34B754312FCEC4.idx  stm32f4xx_hal_dma.h.65ED1311664B64EF.idx  stm32f4xx_hal_dma_ex.h.351A8ECEADFB90E0.idx  stm32f4xx_hal_exti.h.C8CB3123BCF5C4FB.idx  stm32f4xx_hal_flash.h.A480EDB358EB2220.idx  stm32f4xx_hal_flash_ex.h.EE0B5908C4EA7782.idx  stm32f4xx_hal_flash_ramfunc.h.CAA52947A9386659.idx  stm32f4xx_hal_gpio.h.C8CBD80660669ABE.idx  stm32f4xx_hal_gpio_ex.h.FEC510FADCAA5F85.idx  stm32f4xx_hal_pwr.h.D0D888F3132357DA.idx  stm32f4xx_hal_pwr_ex.h.B8AE40C5E6DE0592.idx  stm32f4xx_hal_rcc.h.506DC7C39A3195C9.idx  stm32f4xx_hal_rcc_ex.h.5A697C3186D7E3C1.idx  system_stm32f4xx.h.4A84C2A2F6EE6C4C.idx
bsp/default_board/Inc/: main.h
bsp/default_board/Src/: main.c
drivers/: CMakeLists.txt
drivers/dummy_driver/: dummy.cpp  dummy.h
hal/: CMakeLists.txt  gpio.cpp  gpio.h
project/: CMakeLists.txt  params.h  project.cpp  version.h
utils/: CMakeLists.txt  crc.c  crc.h  swo.cpp  swo.h
